feat: 添加卡片样式支持，重构选中状态逻辑